# tmp-ppl-productivity-agent

./: .env.example  .gitignore  CAUSAL_IMPACT_USAGE.md  IMPLEMENTATION_PLAN.md  README.md  example_causal_impact.py  main.py  pyproject.toml
scripts/: analyze_causal_results.py  estimate_causal_managers.py
sql/: find_manager.sql  list_managers.sql  manager_active_teams.sql  manager_domain_kpis.sql  manager_profile.sql  manager_team_kpis.sql  managers_summary.sql  mns_kpis.sql
src/: __init__.py  causal_impact.py  config.py  data.py  mapping.py  paths.py  plots.py
